--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li class="nav-item"><a class="nav-link" href="#planes">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="#proyectos">Destacados</a></li>
                     <li class="nav-item"><a class="nav-link" href="#productos-digitales">Productos Digitales</a></li>
+                    <li class="nav-item"><a class="nav-link" style="background-color: #fed70d; color: black; border-radius: 10px; width: 100%;" href="https://wa.me/message/2NOZ6FL2KUJWP1"><i class="fab fa-whatsapp"></i> Contactar asesor</a></li>
                 </ul>
             </div>
         </div>
@@ -125,7 +126,7 @@
                             Somos tu agencia creativa de confianza.
                         </h1>
                         <p class="lead text-muted mb-5">
-                            Vortex Studio es un equipo de creativos y estrategas enfocados en transformar tu marca a través de soluciones digitales integrales. Especializados en diseño web, desarrollo de aplicaciones de escritorio, tiendas online y marketing digital, creamos experiencias visuales y funcionales que conectan de manera efectiva con tu audiencia.
+                            Vortex Studio es un equipo de creativos y estrategas dedicados a potenciar tu marca con soluciones digitales a medida. Nos especializamos en el diseño y desarrollo de páginas web, landing pages y tiendas online, creando experiencias digitales visualmente impactantes y altamente funcionales. Nuestra misión es diseñar plataformas que no solo atraigan, sino que también conviertan, ayudando a tu marca a conectar de forma efectiva con tu audiencia y alcanzar sus objetivos.
                         </p>
                         <div class="hero-buttons">
                             <a style="text-decoration: none;" href="https://wa.me/message/2NOZ6FL2KUJWP1">
@@ -405,6 +406,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
+                            <a href="#" class="btn btn-outline-primary">Ir a sitio web</a>
                             <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
@@ -423,6 +425,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
+                            <a href="#" class="btn btn-outline-primary">Ir a sitio web</a>
                             <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
@@ -430,27 +433,24 @@
                 
                 <div class="col-md-4">
                     <div class="card project-card h-100">
-                        <img src="./web3.jpeg" class="card-img-top" alt="Fundación Zoé">
+                        <img src="./web4.png" class="card-img-top" alt="Tortilleria la Esperanza">
                         <div class="card-body">
-                            <h4 class="card-title">Fundación Zoé</h4>
-                            <p class="card-text">Hemos creado una página de aterrizaje optimizada para Fundación Zoe, que facilita la donación directa a través de una integración segura con la pasarela de pago de PayPal. El diseño intuitivo permite a los usuarios realizar contribuciones de manera rápida y sencilla.</p>
+                            <h4 class="card-title">Tortilleria la Esperanza</h4>
+                            <p class="card-text">Hemos desarrollamos una página web intuitiva para Tortillería La Esperanza, diseñada para que sus clientes puedan conocer fácilmente la variedad de productos que ofrecen. La plataforma refleja su compromiso con la calidad y la tradición, brindando una experiencia en línea que conecta a los usuarios con la esencia de su negocio.</p>
                             <div class="tech-stack">
-                                <span class="badge bg-primary">Nuxt 3</span>
+                                <span class="badge bg-primary">HTML</span>
                                 <span class="badge bg-secondary">CSS</span>
-                                <span class="badge bg-success">Paypal</span>
+                                <span class="badge bg-success">JavaScript</span>
                             </div>
                         </div>
                         <div class="card-footer">
+                            <a href="https://tortillerialaesperanza.com" class="btn btn-outline-primary">Ir a sitio web</a>
                             <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-
-
     </section>
 
     <!-- Nueva sección Sobre Nosotros -->
@@ -461,11 +461,11 @@
                 <div class="col-lg-6">
                     <h2 class="mb-4">Innovación y Creatividad</h2>
                     <div class="about-content">
-                        <p class="lead mb-4">
-                            En nuestra agencia, nos especializamos en creatividad e innovación. Contamos con un equipo altamente capacitado de diseñadores y expertos en marketing, comprometidos en potenciar el crecimiento de tu negocio. Ofrecemos un servicio personalizado en cada uno de nuestros proyectos, asegurando un acompañamiento integral a lo largo de todo el proceso.
+                        <p class=" mb-4">
+                            En nuestra agencia nos apasiona la creatividad y la innovación. Contamos con un equipo de profesionales comprometidos en llevar tu proyecto al siguiente nivel. Cada uno de nuestros colaboradores aporta su experiencia y dedicación para ofrecer soluciones personalizadas y únicas, adaptadas a tus objetivos.
                         </p>
                         <p class="mb-4">
-                            Cada proyecto es una oportunidad para demostrar nuestra dedicación y profesionalismo. Permítenos guiarte hacia nuevos horizontes, siempre con un enfoque centrado en tus necesidades y una visión creativa que marca la diferencia.
+                            Nos enfocamos en brindarte un acompañamiento cercano y de confianza durante todo el proceso, asegurando que cada detalle refleje el máximo nivel de calidad. Estamos aquí para transformar tus ideas en realidad y acompañarte en cada paso del camino, siempre con un enfoque que resalta tu visión y hace la diferencia.
                         </p>
                     </div>
                 </div>
