--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./portafolio.html">Portafolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#planes">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="#proyectos">Destacados</a></li>
                     <li class="nav-item"><a class="nav-link" href="#productos-digitales">Productos Digitales</a></li>
