--- a/portafolio.html
+++ b/portafolio.html
@@ -113,25 +113,8 @@
         <div class="container">
             <h2 class="text-center mb-5">Proyectos Destacados</h2>
             <div class="row g-4">
-                <div class="col-md-4">
-                    <div class="card project-card h-100">
-                        <img src="./web1.jpeg" class="card-img-top" alt="Mantequilla Store">
-                        <div class="card-body">
-                            <h4 class="card-title">Mantequilla Store</h4>
-                            <p class="card-text">
-                                Desarrollamos una página de aterrizaje optimizada para Mantequilla Store, integrada directamente con su aplicación móvil, ofreciendo una transición fluida para los usuarios.</p>
-                            <div class="tech-stack">
-                                <span class="badge bg-primary">HTML</span>
-                                <span class="badge bg-secondary">CSS</span>
-                                <span class="badge bg-success">JAVASCRIPT</span>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <a href="#" class="btn btn-outline-primary">Ir a sitio web</a>
-                        </div>
-                    </div>
-                </div>
                 
+
                 <div class="col-md-4">
                     <div class="card project-card h-100">
                         <img src="./web2.jpeg" class="card-img-top" alt="Mantequilla Rides">
@@ -146,10 +129,31 @@
                         </div>
                         <div class="card-footer">
                             <a href="#" class="btn btn-outline-primary">Ir a sitio web</a>
+                            <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
                 </div>
                 
+                <div class="col-md-4">
+                    <div class="card project-card h-100">
+                        <img src="./web3.png" class="card-img-top" alt="DANPITKO">
+                        <div class="card-body">
+                            <h4 class="card-title">Dan Pitko</h4>
+                            <p class="card-text">Hemos desarrollado una página web intuitiva para DANPITKO, diseñada para que emprendedores y profesionales accedan fácilmente a recursos, asesorías y estrategias para su crecimiento. La plataforma refleja el compromiso con el desarrollo personal y profesional, brindando una experiencia en línea que conecta a los usuarios con mentorías de alto impacto.</p>
+                            <div class="tech-stack">
+                                <span class="badge bg-primary">HTML</span>
+                                <span class="badge bg-secondary">CSS</span>
+                                <span class="badge bg-success">JavaScript</span>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a href="https://danpitko.com" class="btn btn-outline-primary">Ir a sitio web</a>
+                            <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="col-md-4">
                     <div class="card project-card h-100">
                         <img src="./web4.png" class="card-img-top" alt="Tortilleria la Esperanza">
@@ -164,9 +168,13 @@
                         </div>
                         <div class="card-footer">
                             <a href="https://tortillerialaesperanza.com" class="btn btn-outline-primary">Ir a sitio web</a>
+                            <a href="./portafolio.html" class="btn btn-outline-primary">Ver más</a>
                         </div>
                     </div>
                 </div>
+
+
+
             </div>
         </div>
     </section>
